# CraftyLlamaBot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
craftyllamabot/: logger_config.py  main.py  models.py  passmanager.py  settings.py
susstral/: main.py  passmanager.py
