[tool.poetry]
name = "susstral"
version = "0.1.0"
description = ""
authors = ["Kenny Le"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = {extras = ["voice"], version = "^2.3.2"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.1"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
