[tool.poetry]
name = "CraftyLlamaBot"
version = "0.1.0"
description = "Discord bot to for the CraftyLlamaCoalition."
authors = ["Kenny Le"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord-py = {extras = ["voice"], version = "^2.3.2"}
peewee = "^3.17.1"
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.1"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
